--- a/css/home.css
+++ b/css/home.css
@@ -30,11 +30,8 @@
     font-size: 48px;
     font-family: 'Source Sans Pro', sans-serif;
     width: 50vw;
-}
-@media (max-width: 1367px) {
-    .home__title {
-        font-size: 40px;
-    }
+    text-transform: capitalize;
+    line-height: 1.5;
 }
 .home__text {
     width: 40vw;
@@ -45,7 +42,7 @@
 }
 .home__buttons-item {
     font-size: 15px;
-    padding: 12px 35px;
+    padding: 18px 38px;
     margin: 10px 10px;
     color: white;
     background: none;
@@ -55,13 +52,29 @@
 .home__buttons-item:first-of-type {
     background: rgb(255,60,80);
 }
+@media (max-width: 1367px) {
+    .home__title {
+        font-size: 42px;
+    }
+}
 @media (max-width: 1024px) {
     .home__title {
-        font-size: 36px;
         width: 60vw;
     }
     .home__text {
         width: 60vw;
-        font-size: 14px;
+    }
+}
+@media (max-width: 430px) {
+    .home {
+        height: 90vh;
+        justify-content: flex-start;
+    }
+    .home__title {
+        width: 90vw;
+        margin-top: 5px;
+    }
+    .home__text {
+        width: 90vw;
     }
 }
