--- a/css/tiles.css
+++ b/css/tiles.css
@@ -37,3 +37,48 @@ hr {
     line-height: 1.5;
     text-align: justify;
 }
+@media (max-width: 1025px) {
+    .tiles__item-image {
+        margin: 65px 25px 15px 25px;
+    }
+    .tiles__item-title {
+        padding: 10px 25px 50px 25px;
+    }
+    hr {
+        margin: 0 auto 0 25px;
+    }
+    .tiles__item-text {
+        padding: 10px 25px 50px 25px;
+    }
+}
+@media (max-width: 769px) {
+    .tiles {
+        flex-wrap: wrap;
+        margin-top: -7.5vh;
+    }
+    .tiles__item {
+        width: 55vw;
+        margin: 0 auto 30px auto;
+    }
+    .tiles__item-image {
+        margin: 6vh 7vw 0 7vw;
+    }
+    .tiles__item-title {
+        padding: 0 7vw 0 7vw;
+    }
+    hr {
+        margin: 0 auto 0 7vw;
+    }
+    .tiles__item-text {
+        padding: 1vh 7vw 4vh 7vw;
+    }
+}
+
+@media (max-width: 430px) {
+    .tiles {
+        margin-top: -5vh;
+    }
+    .tiles__item {
+        width: 90vw;
+    }
+}
