--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .home {
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
     height: 75vh;
     background-image: url(../images/background.jpg);
     background-position: center;
